src-tauri/tests/snapshots/streaming_send_params__params_for_new_session.snap
---
source: tests/streaming_send_params.rs
assertion_line: 151
expression: "&params"
---
cwd: /abs/workspace
effortLevel: high
fastMode: false
model: claude-opus-4
permissionMode: bypassPermissions
prompt: hello
provider: claude
resume: ~
resumeSessionAt: ~
sessionId: sidecar-sess-1
