src-tauri/tests/snapshots/streaming_send_params__params_malformed_linked_column.snap
---
source: tests/streaming_send_params.rs
assertion_line: 160
expression: "&params"
---
cwd: /abs/workspace
effortLevel: high
fastMode: false
model: claude-opus-4
permissionMode: bypassPermissions
prompt: hello
provider: claude
resume: ~
resumeSessionAt: ~
sessionId: sidecar-sess-1
